[tool.poetry]
name = "sequence-metrics"
version = "0.0.1"
description = "A set of metrics for Sequence Labelling tasks"
authors = ["Indico Data <rd@indicodata.ai>"]
packages = [ { include = "sequence_metrics" } ]

[tool.poetry.dependencies]
python = ">=3.10"
spacy = "~3.0.0"
scikit-learn = "~1.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.pytest.ini_options]
addopts = "-ra -sv"
testpaths = [
    "tests"
]