[tool.poetry]
name = "sequence-metrics"
version = "0.0.2"
description = "A set of metrics for Sequence Labelling tasks"
authors = ["Indico Data <rd@indicodata.ai>"]
packages = [ { include = "sequence_metrics" } ]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
spacy = "~3.7.0"
scikit-learn = "~1.0.0"
tabulate = "^0.9.0"
numpy = "^1.26.3"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.pytest.ini_options]
addopts = "-ra -sv"
testpaths = [
    "tests"
]